# vcpkg3

./: appveyor.yml
.github/workflows/: arm.yml  arm64-2.yml  arm64-3.yml  arm64-4.yml  arm64-5.yml  arm64-bcr.yml  arm64-exiv2.yml  arm64-icu.yml  arm64-openexr.yml  arm64-qt.yml  arm64.yml  qt5-base.yml  x86.yml  x86_64.yml
bctest/: CMakeLists.txt  test_fcontext.cpp
mpeg2/: CMakeLists.txt  mp2.cpp
ports/boost-build/: arm64msvc.patch
ports/boost-context/: 0001-Fix-compilation-with-MSVC-for-ARM.patch  0002-Add-support-for-MSVC-ARM64.patch  portfile.cmake
ports/curl/: CONTROL  portfile.cmake
ports/discord-rpc/: portfile.cmake
ports/exiv2/: 1060.diff  CONTROL  portfile.cmake
ports/expat/: portfile.cmake
ports/faad2/: CMakeLists.txt  CONTROL  portfile.cmake
ports/libmad/: 0001-Fix-MSVC-ARM.patch  portfile.cmake
ports/libmpeg2/: CMakeLists.txt  CONTROL  portfile.cmake
ports/libzip/: cmake_dont_build_more_than_needed.patch  portfile.cmake
ports/sdl2/: fix-arm.patch  portfile.cmake
scripts/: fetchTool.ps1  vcpkgTools.xml
scripts/cmake/: vcpkg_configure_cmake.cmake
triplets/: arm-windows.cmake
